--- a/.github/workflows/ci_test_quality.yaml
+++ b/.github/workflows/ci_test_quality.yaml
@@ -132,4 +132,4 @@ jobs:
       - name: Clean Builder Backend Docker
         if: always()
         working-directory: backend
-        run: docker compose -f docker-compose-build.yml down
+        run: docker compose -f docker-compose-build.yaml down
