--- a/.github/workflows/ci_test_quality.yaml
+++ b/.github/workflows/ci_test_quality.yaml
@@ -133,3 +133,39 @@ jobs:
         if: always()
         working-directory: backend
         run: docker compose -f docker-compose-build.yaml down
+
+  QualityBack:
+    needs: [Backend, Frontend]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v3.1.0
+        with:
+          projectBaseDir: ./backend
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACK }}
+  
+  QualityFront:
+    needs: [Backend, Frontend]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v3.1.0
+        with:
+          projectBaseDir: ./frontend
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONT }}
