--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,6 +1,6 @@
 # MetaData
-sonar.organization=floriansp40
-sonar.projectKey=floriansp40__demo_front
+sonar.organization=cesi-64
+sonar.projectKey=cesi-64_maasi-micsi-24_reims_frontend
 
 sonar.projectVersion=1.0.0
 sonar.projectEncoding=UTF-8
