--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -19,4 +19,4 @@ sonar.sources=src
 sonar.exclusions=node_modules/*,test/*
 
 # Quality Gate
-sonar.qualitygate.wait=true
+sonar.qualitygate.wait=false
