--- a/.github/workflows/ci_test_quality.yaml
+++ b/.github/workflows/ci_test_quality.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Backend:
-    if: ${{ github.event_name == 'pull_request' }}
+    if: ${{ github.event_name == 'pull_request' && !contains(github.event.head_commit.message, '#test') }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -170,10 +170,24 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONT }}
 
+  Runner:
+    if: ${{ github.event_name == 'push' }}
+    uses: ./.github/workflows/deploy_runner.yaml
+  
   DockerBuild:
     if: ${{ github.event_name == 'push' }}
+    needs: [Runner]
     permissions:
       contents: read
       packages: write
     uses: ./.github/workflows/docker_ghcr.yaml
     secrets: inherit
+
+  
+
+
+  # Canary:
+  #   if: ${{ github.event_name == 'push' && contains(github.event.head_commit.message, '#canary')}}
+
+  # Production:
+  #   if: ${{ github.event_name == 'push' && contains(github.event.head_commit.message, '#prod')}}
