--- a/.github/workflows/deploy_runner.yaml
+++ b/.github/workflows/deploy_runner.yaml
@@ -18,3 +18,8 @@ jobs:
       - name: Owasp Zap
         run: |
           docker run -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -t http://10.1.0.4:23000
+
+      - name: Clear files
+        run: |
+          docker compose -f docker-compose-global-build.yaml down
+          sudo rm -rf mysql
