--- a/.github/workflows/ci_test_quality.yaml
+++ b/.github/workflows/ci_test_quality.yaml
@@ -38,6 +38,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Test ref
+        run: echo ${{github.event.pull_request.head.ref}}
+
       - name: Check Database Cnx
         run: |
           sudo apt-get install -y mysql-client
